# af-analytics-mcp-servers

./: .env-example  .gitignore  README.md  algo_insights_server.py  client.py  config-example.json  pyproject.toml  weekly_kpis_server.py
docs/: prompt.txt
docs/algo_insights/: queries.yaml
docs/kpis/: queries.yaml
docs/okrs/: queries.yaml
tools/algo_insights/: __init__.py  nodes_tool.py  queries_tool.py  report_tool.py  tvl_tool.py  update_sheet_tool.py
tools/kpis/: __init__.py  active_devs.py  algokit.py  cmc_tool.py  nodes_tool.py  on_chain_tool.py  publish_tool.py  tvl_tool.py  weekly_kpi_tool.py
utils/: utils.py
